--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon ./bin/www"
   },
   "dependencies": {
     "express": "^5.1.0",
     "http-errors": "2.0.0",
     "mysql2": "^3.14.2",
     "pug": "3.0.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
